tests/org.eclipse.php.core.tests/workspace/errors/php53/testUseStatementUsage02.pdtt
--TEST--
Test unused use statement, case insensitive
--FILE--
<?php
use Test\UnusedStatement;
use Test\UsedStatement;

new usedstatement();
--EXPECT--
[line=2, start=6, end=31] Unused import 'Test\UnusedStatement', consider removing